# resource_allocation

./: .gitignore  Copy_3_of_teste.mat  Copy_of_mcts_time_0_5_alpha_0_5_uct_3.mat  all.txt  fullwindow.m  fullwindow.mat  greedy.m  greedy_0_5_0_5.mat  main.m  main_back.m  mcts_alpha_0_5.mat  mcts_time_0_5_alpha_0_5_uct_3.mat  random.m  random_0_5_0_5.mat  results_disp.m  results_disp_subplot.m  setup.bash  teste.mat  teste2.mat
colorfeatures/: associateData.m  bhattacharyya.m  extractBVT.m  makingDefaultMask.m  smartPadImageToBodyPartMaskSize.m
lib/: README  main.m  mcts.m  mcts_interface_mex.cpp  mcts_interface_mex.mexa64
lib/build-mcts-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  myprog  resource_allocation.cbp
lib/mcts/: CMakeLists.txt  CMakeLists.txt.user.3ff646c  CMakeLists.txt.user.eca0b71  test.cpp
lib/mcts/include/: MSALoopTimer.h  MultiplePedestrianBelief.h  PedestrianBelief.h  TreeNodeT.h  ofxMSAmcts.h
lib/resource_constraint/: compute_action.m  compute_rois.m  initializeMCTS.m
lib/tracking/: compute_rois.m  createNewTracks.m  deleteLostTracks.m  displayTrackingResults.m  initializeTracks.m  observation_model.m  predict.m  updateAssignedTracks.m  updateUnassignedTracks.m
matlab/tracking/: setupSystemObjects.m
